Fix latest tag overlapping with version
Fixes the latest tag overlapping with the version in the selector.

--- a/themes/crossplane/static/css/docs.css
+++ b/themes/crossplane/static/css/docs.css
@@ -519,7 +519,7 @@ pre > code {
   pointer-events: none;
 }
 #docs-header .versions.latest select {
-  padding-right: 95px;
+  padding-right: 105px;
 }
 .docs-menu {
   min-width: 260px;
